<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gevrek</string>
    <string name="action_settings">Settings</string>
    <string name="cow_manager">COW Helper</string>
    <string name="cow_username">COW Username</string>
    <string name="cow_password">COW Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save_password">Save Password</string>
    <string name="login">Login</string>
    <string name="loading">Loading</string>
    <string name="login_success">Login Success</string>
    <string name="check_creds">Wrong Username or Password</string>
    <string name="network_problem">Network Problem</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Newsgroups</string>
    <string name="title_section2">Notes</string>
    <string name="title_section3">Settings</string>
    <string name="title_section4">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_group_messages">GroupMessages</string>
    <string name="title_activity_message_read">MessageRead</string>
    <string name="subjet_text">Subject</string>
    <string name="from_text">From</string>
    <string name="date">Date</string>
    <string name="attachments">Attachments</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="body_text">Body</string>
    <string name="quote">Add Quote</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="previus">Prev</string>
    <string name="reply">Reply</string>
    <string name="new_post">New</string>
    <string name="no_hmw">There is no Homework listed.</string>
    <string name="title_activity_news_group_edit">NewsGroupEdit</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="name">Current User:</string>
    <string name="delete_user">Delete User</string>
    <string name="deadline">Deadline</string>
    <string name="track_hmw">Check for note updates.</string>
    <string name="hwm_deadline_passed">Deadline is passed.</string>
    <string name="schedule">Schedule</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="still">Still</string>
    <string name="please_fill">Error, Must Fill.</string>
    <string name="use_only_wifi">Use only wifi when loading.</string>
    <string name="background_updates">Background updates.</string>
    <string name="scheduled_message">Send Scheduled Message</string>
    <string name="service_name">updateService</string>
    <string name="no_course_selected">No Course Selected</string>
    <string name="avatar_options">Avatar Download Options</string>
    <string name="no_homework">No course selected.</string>

    <string-array name="data_status">
        <item>Download with Wifi</item>
        <item>Download with Wifi, 3G</item>
        <item>Download with Wifi, 3G, Edge</item>
    </string-array>

</resources>
