<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/section1"
        android:title="@string/title_section1"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/section2"
        android:title="@string/title_section2"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/section3"
        android:title="@string/title_section3"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/section4"
        android:title="@string/title_section4"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
