<RelativeLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:id="@+id/postLayout"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_text"
            android:id="@+id/textView"
            android:layout_weight="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fromEdit"
            android:layout_weight="0"
            android:background="@drawable/custom_edittext"
            android:padding="8dip"
            android:editable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subjet_text"
            android:id="@+id/textView2"
            android:layout_weight="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subjectEdit"
            android:layout_weight="0"
            android:background="@drawable/custom_edittext"
            android:layout_margin="2dp"
            android:padding="8dip" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body_text"
            android:id="@+id/textView3"
            android:layout_weight="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/bodyEdit"
            android:layout_weight="1"
            android:background="@drawable/custom_edittext"
            android:layout_margin="2dp"
            android:padding="8dip"
            android:textIsSelectable="true" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quote"
            android:id="@+id/quoteCheck"
            android:layout_weight="0" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">



            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/btnStyleOrange"
                android:layout_margin="3dp"
                android:text="@string/cancel"
                android:id="@+id/cancelButton" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:id="@+id/sendButton"
                android:layout_weight="1"
                style="@style/btnStyleBlue"
                android:layout_margin="3dp" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/postBar"
        android:layout_centerInParent="true" />

</RelativeLayout>