<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:animateLayoutChanges="true"
    android:background="#2f6699">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/greetings"
        android:animateLayoutChanges="true"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_alignParentBottom="false"
                android:src="@drawable/ic_launcher"
                android:animateLayoutChanges="true"

                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gevrek"
                android:id="@+id/textView3"
                android:layout_gravity="center"
                android:gravity="fill_horizontal|center_vertical|center_horizontal|fill_vertical"
                android:layout_margin="2dp"
                android:textStyle="bold|italic"
                android:textSize="40dp"
                android:textColor="#ffffff" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cow_manager"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignTop="@+id/greetings"
        android:layout_marginTop="64dp"
        android:layout_alignParentLeft="true"
        android:id="@+id/loginform"
        android:visibility="gone"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cow_username"
            android:id="@+id/textView"
            android:paddingBottom="5dp"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameedittext"
            android:background="@drawable/custom_edittext"
            android:padding="8dip"
            android:paddingBottom="5dp"
            android:hint="@string/username" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cow_password"
            android:id="@+id/textView2"
            android:paddingBottom="5dp"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@drawable/custom_edittext"
            android:padding="8dip"
            android:id="@+id/passwordedittext"
            android:paddingBottom="5dp"
            android:hint="@string/password" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_password"
            android:id="@+id/savestatecheckbox"
            android:paddingBottom="5dp"
            android:textColor="#ffffff" />

        <Button
            style="@style/btnStyleOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginbutton"
            android:paddingBottom="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:layout_below="@id/greetings"
        android:layout_alignLeft="@id/greetings"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/loading"
            android:id="@+id/textView5"
            android:layout_gravity="center|left"
            android:gravity="left"
            android:textColor="#ffffff" />

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" />
    </LinearLayout>

</RelativeLayout>
