<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hankarun.gevrek.NewsGroupEdit$PlaceholderFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/groupSearchEdit"
        android:hint="@string/search"
        android:drawableRight="@drawable/ic_action_remove"
        android:drawableLeft="@drawable/ic_action_search"
        android:visibility="gone" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/allGroupsList"
        android:layout_below="@+id/groupSearchEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/layout1"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/groupcancel"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            style="@style/btnStyleOrange"
            android:layout_margin="2dp"
            android:visibility="gone" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/groupsave"
            android:layout_weight="1"
            style="@style/btnStyleBlue"
            android:layout_margin="2dp"
            android:visibility="gone" />
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:mirrorForRtl="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:id="@+id/editProgress" />
</RelativeLayout>
